create auth activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,17 @@
     <string name="questionnaire">Questionnaire</string>
     <string name="interview">Interview</string>
     <string name="test">Test</string>
-    <string name="title_activity_main2">Main2Activity</string>
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
+    <string name="title_activity_authorization">Sign in</string>
+
+    <!--Authorization-->
+    <string name="auth_login">Login</string>
+    <string name="auth_password">Password</string>
+    <string name="log_in">Log In</string>
+    <string name="wrong_credentials">Wrong login or password</string>
+    <string name="empty_credentials">Type login and password</string>
+    <string name="no_internet">No Internet connection</string>
+    <string name="auth_banned">You have been banned</string>
 
 </resources>
