Question&Answer activity on Work, PART 2

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,7 @@
 
 
     <!--Quiz creation-->
-    <string name="title_create_questionnaire">Create questionnaire</string>
+    <string name="title_create_questionnaire">Answer question</string>
     <string name="title_create_interview">Create interview</string>
     <string name="creation_title">Title</string>
     <string name="creation_description">Description</string>
