--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">QIT</string>
     <string name="Questionnaires">Questionnaires</string>
     <string name="Interviews">Interviews</string>
-    <string name="Events">Events</string>
+    <string name="Room_Chat">Room Chat</string>
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="title_activity_authorization">Sign in</string>
