--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="no_internet">No Internet connection</string>
     <string name="auth_banned">You have been banned</string>
     <string name="edit_profile">Edit Profile</string>
-    <string name="logout">Logout</string>
+    <string name="logout">Leave Room</string>
 
 
     <!--Quiz creation-->
@@ -37,6 +37,7 @@
         <item>Text (detailed)</item>
     </array>
     <string name="title_activity_graphic">GraphicActivity</string>
+    <string name="saveEditedBtn">Save Edited Profile</string>
 
 
 </resources>
