--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -49,7 +49,7 @@
     <string name="logout">"Покинуть комнату "</string>
     <string name="logout_sercher">"Выйти "</string>
     <string name="my_events">"МОИ СОБЫТИЯ "</string>
-    <string name="need_confirm">"ВАМ НУЖНО ПОДТВЕРЖДЕНИЕ! "</string>
+    <string name="need_confirm">"ВАМ НУЖНО ПОДТВЕРЖДЕНИЕ! \n ОЖИДАЙТЕ ПОДТВЕРЖДЕНИЯ АДМИНИСТРАТОРА ГРУППЫ "</string>
     <string name="need_pasw">"ВАМ НУЖЕН ПАРОЛЬ! "</string>
     <string name="no_fill">"Некоторые поля не заполнены! "</string>
     <string name="no_gen">"НЕТ ПОЛА "</string>
